@@ -91,6 +91,8 @@ define('PHPWS_FILE_DIR_NONWRITE',     -806);
 define('PHPWS_FILE_NO_TMP',           -807);
 define('PHPWS_FILE_SIZE',             -808);
 define('PHPWS_GD_ERROR',              -809);
+define('PHPWS_FILE_NOT_WRITABLE',     -810);
+define('PHPWS_FILE_NO_COPY',          -811);
 
 
 /******** Image.php & Document.php ********/
